--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -15,7 +15,7 @@
 
 .contact-form > input, textarea {
   display: block;
-  width: 100%;
+  width: 93%;
   margin-bottom: 1rem;
   padding: .75rem;
   border-radius: 3px;
