--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -38,7 +38,8 @@ body {
   color: #000000;
   padding: 0;
   margin: 0;
-  overflow-x: auto;
+  overflow-y: scroll;
+  overflow-x: hidden;
 }
 
 p {margin-bottom: 1rem;}
@@ -69,6 +70,13 @@ small, .text_small {font-size: 0.8rem;}
   display: none;
 }
 
+main {
+  width: 100vw;
+  max-width: 100%;
+  position: static;
+  overflow-y: scroll;
+  overflow-x: hidden;
+}
 
 ul {
   margin: 0;
